--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
         <input name="pesquisa" placeholder="Digite o nome do filmes">
         <button>Pesquisar</button>
     </form>
-    
+    <div class="lista">
+
+        <div class="item">
+
+        </div>
+
+        <div class="item">
+
+        </div>
+
+    </div>
 </body>
 <script src="js/api.js"></script>
 </html>
