--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
     <div class="lista">
 
         <div class="item">
+            <img src="">
+
+            <h2></h2>
 
         </div>
 
         <div class="item">
+            <img src="">
+
+            <h2></h2>
 
         </div>
 
