--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 class="title">Filmes</h1>
     <form>
-        <input name="pesquisa" placeholder="Digite o nome do filmes">
+        <input name="pesquisa" placeholder="Digite o nome do filme">
         <button>Pesquisar</button>
     </form>
     <div class="lista">
